WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304194
RenderMathMLRoot incorrectly caches radical operator width when children are dynamically removed
https://bugs.webkit.org/show_bug.cgi?id=304194
Summary
RenderMathMLRoot incorrectly caches radical operator width when children are ...
Ahmad Saleem
Reported
2025-12-15 11:22:53 PST
ssia - we are failing two WPT, so just want to progress them.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-15 11:23:01 PST
<
rdar://problem/166556627
>
Ahmad Saleem
Comment 2
2025-12-15 11:24:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55416
EWS
Comment 3
2025-12-20 10:45:04 PST
Committed
304822@main
(498cdeb54915): <
https://commits.webkit.org/304822@main
> Reviewed commits have been landed. Closing PR #55416 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug